...
    <string name="library_mpandroidchart" tools:ignore="ExtraTranslation" translatable="false">MPAndroidChart</string>
    <string name="library_mpandroidchart_github" translatable="false">https://github.com/PhilJay/MPAndroidChart</string>
    <string name="period_days">Days</string>
    <string name="period_months">Months</string>
    <string name="period_weeks">Weeks</string>
    <string name="period_years">Years</string>
    <string name="preferences_currency_symbol">Currency Symbol</string>
    <string name="preferences_date_format">Date Format</string>
    <string name="preferences_date_full">Monday, April 19, 1993</string>
    <string name="preferences_date_long">April 19, 1993</string>
    <string name="preferences_date_medium">Apr 19, 1993</string>
    <string name="preferences_date_short">4/19/93</string>
    <string name="preferences_decimal_places_summary_off">Decimal places cannot be used.</string>
    <string name="preferences_decimal_places_summary_on">Decimal places can be used.</string>
    <string name="preferences_decimal_symbol">Decimal Separator Symbol</string>
    <string name="preferences_language">Language</string>
    <string name="preferences_decimal_number">Decimal Places</string>
    <string name="preferences_currency_symbol_side">Currency Symbol Side</string>
    <string name="preferences_symbol_side_summary_off">Currency symbol will appear on right side.</string>
    <string name="preferences_symbol_side_summary_on">Currency symbol will appear on left side.</string>
    <string name="preferences_thousands_symbol">Thousands Separator Symbol</string>
    <string name="settings">Settings</string>
    <string name="snackbar_saved">Transaction saved!</string>
    <string name="total_number" translatable="false">%1$s</string>
    <string name="total_number_symbol" translatable="false">%1$s%2$s</string>
    <string name="transaction_account">Account</string>
    <string name="transaction_blank_hint" translatable="false"> </string>
...
    <string name="alert_dialog_duplicate_symbols_warning">The thousands and decimal separators cannot be the same, would you like to switch them?</string>
    <string name="accounts">Accounts</string>
    <string name="account_new">New Account</string>
    <string name="category_new">New Category</string>
    <string name="cfl_menu_transaction">New Transaction</string>
    <string name="transaction_save">Save Transaction</string>
    <string name="transaction">Transaction</string>
    <string name="cfl_overview">Overview</string>
    <string name="cfl_drawer_description">Open Navigation Drawer</string>
    <string name="navigate_back">Navigate Back</string>
    <string name="app_github_link" translatable="false">https://github.com/HeyZeusV/PlutusWallet</string>
    <string name="about_github" translatable="false">GitHub</string>
    <string name="preferences_theme">Theme</string>
    <string name="preferences_theme_light">Light</string>
    <string name="preferences_theme_dark">Dark</string>
    <string name="preferences_theme_system">System</string>
    <string name="alert_dialog_input_error">Can\'t be blank!</string>
    <string name="transaction_period">Period</string>
    <string name="cfl_menu_filter">Edit Filter</string>
    <string name="filter_no_selected_account">Please select at least one account!!</string>
    <string name="filter_no_selected_category">Please select at least one category!!</string>
    <string name="filter_no_selected_dates">Please select start and end dates!!</string>
...
