...
        <variable
            name="listVM"
            type="com.heyzeusv.plutuswallet.ui.cfl.tranlist.TransactionListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ivt_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:onClick="@{() -> listVM.openTranOC(ivt.id)}"
        android:onLongClick="@{() -> listVM.deleteTranOC(ivt)}"
        tools:ignore="RtlHardcoded">

        <TextView
            android:id="@+id/ivt_title"
            style="@style/TextView.Scrollable"
            android:layout_marginStart="@dimen/tranListMarginOuterStartEndTop"
            android:layout_marginTop="@dimen/tranListMarginOuterStartEndTop"
            android:layout_marginEnd="@dimen/tranListMarginInnerStartEnd"
            android:text="@{ivt.title}"
            android:textColor="@color/textColorPrimary"
            app:layout_constraintEnd_toStartOf="@+id/ivt_total"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:selected="@{true}"
            tools:text="Transaction Title" />

        <TextView
            android:id="@+id/ivt_account"
            style="@style/TextView.Scrollable"
            android:layout_marginStart="@dimen/tranListMarginOuterStartEndTop"
            android:layout_marginTop="@dimen/tranListMarginOuterBottomInnerTopBottom"
            android:layout_marginEnd="@dimen/tranListMarginInnerStartEnd"
            android:text="@{ivt.account}"
            android:textSize="@dimen/textSizeTranListViewHolder"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivt_title"
            app:selected="@{true}"
            tools:text="None" />

        <TextView
            android:id="@+id/ivt_date"
            style="@style/TextView.Scrollable"
            android:layout_marginStart="@dimen/tranListMarginOuterStartEndTop"
            android:layout_marginTop="@dimen/tranListMarginOuterBottomInnerTopBottom"
            android:layout_marginEnd="@dimen/tranListMarginInnerStartEnd"
            android:layout_marginBottom="@dimen/tranListMarginOuterBottomInnerTopBottom"
            android:textSize="@dimen/textSizeTranListViewHolder"
...
            app:layout_constraintStart_toEndOf="@+id/ivt_title"
            app:layout_constraintTop_toTopOf="parent"
            app:selected="@{true}"
            tools:text="Transaction Total" />

        <TextView
            android:id="@+id/ivt_category"
            style="@style/TextView.Scrollable"
            android:layout_marginStart="@dimen/tranListMarginInnerStartEnd"
            android:layout_marginEnd="@dimen/tranListMarginOuterStartEndTop"
            android:gravity="right"
            android:text="@{ivt.category}"
            android:textSize="@dimen/textSizeTranListViewHolder"
...
