<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/accountFragment"
        android:icon="@drawable/ic_baseline_accounts_24"
        android:title="@string/accounts" />

    <item
        android:id="@+id/categoryFragment"
        android:icon="@drawable/ic_baseline_categories_24"
        android:title="@string/categories" />

    <item
        android:id="@+id/actionSettings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings" />

    <item
        android:id="@+id/aboutFragment"
        android:icon="@drawable/ic_baseline_information_24"
        android:title="@string/about" />
</menu>
